--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "backend for chess app",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node app.ts",
     "dev": "ts-node-dev app.ts",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "preinstall": "npx npm-force-resolutions"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.22",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.2.7",
     "ts-node": "^10.7.0"
   },
   "devDependencies": {
@@ -22,13 +25,16 @@
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
+  },
+  "resolutions": {
+    "minimist": "^0.2.1"
   }
 }
